Se implementa function app que actualiza las ventas internacionales, dentro de sus funciones son: Buscar ventas no liquidadas que tengan campo internacional null, listar companies de acuerdo a la lista de rut obtenidas anteriormente y finalmente, actualizar ventas de acuerdo a si son nacionales o internacionales. Para realizar la actualización se crea método eficiente que agrupa datos según campo internacional, así se hacen tantas querys como grupos hayan y así no se realizan querys por cada registro.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@azure/storage-blob": "^12.7.0",
     "@sendgrid/mail": "^7.4.6",
     "dateformat": "^4.5.1",
+    "lodash.groupby": "^4.6.0",
     "mssql": "^6.3.2",
     "nodemailer": "^6.6.3",
     "nodemailer-express-handlebars": "^4.0.0",
