Se implementa endpoint nro V, obtiene data de un bigquery, genera archivo y lo envia por email

--- a/local.settings.json.example
+++ b/local.settings.json.example
@@ -5,6 +5,7 @@
     "AzureWebJobsStorage": "",
     "TMP_FOLDER": "tmp/",
     "IMG_FOLDER": "shared/img/",
+    "NOMBRE_INFORMA": "",
     "DB_HOST_FINANCES_HOST": "",
     "DB_HOST_FINANCES_DBNAME": "",
     "DB_HOST_FINANCES_USER": "",
@@ -25,24 +26,28 @@
     "DB_HOST_PRODUCTS_DBNAME": "",
     "DB_HOST_PRODUCTS_USER": "",
     "DB_HOST_PRODUCTS_PASSWORD": "",
-    "N_INFORME_SKU_FILE": "InformeSku",
-    "N_PENDIENTES_LIQUIDAR_FILE": "SKUPendientesLiq",
-    "N_SIN_CATEGORIA_FILE": "SKUSinCategoria",
-    "N_SALES_FILE": "VentasLiquidadas",
-    "N_SELLERS_FILE": "SellersLiquidados",
+    "N_INFORME_SKU_FILE": "",
+    "N_PENDIENTES_LIQUIDAR_FILE": "",
+    "N_SIN_CATEGORIA_FILE": "",
+    "N_SALES_FILE": "",
+    "N_SELLERS_FILE": "",
     "AZURE_STORAGE_ACCOUNT": "",
     "AZURE_STORAGE_ACCESS_KEY": "",
     "AZURE_STORAGE_CONNECTION_STRING": "",
-    "SENDGRID_API_KEY": "",
+    "SENDGRID_API_KEY":"",
     "SENDGRID_MAIL_FROM": "",
     "SENDGRID_MAIL_TO": "",
     "SENDGRID_MAIL_CC": "",
     "SENDGRID_MAIL_BCC": "",
-    "GMAIL_HOST": "smtp.gmail.com",
+    "GMAIL_HOST": "",
     "GMAIL_PORT": 465,
     "GMAIL_REQUIRETLS": true,
     "GMAIL_AUTH_USER": "",
     "GMAIL_AUTH_PASSWORD": "",
+    "GMAIL_MAIL_FROM": "",
+    "GMAIL_MAIL_TO": "",
+    "GMAIL_MAIL_CC": "",
+    "GMAIL_MAIL_BCC": "",
     "private_key": "",
     "client_email": "",
     "GCLOUD_PROJECT": ""
