--- a/package.json
+++ b/package.json
@@ -11,17 +11,14 @@
     "@azure/storage-blob": "^12.7.0",
     "@google-cloud/bigquery": "^5.8.0",
     "@sendgrid/mail": "^7.4.6",
-    "async": "^3.2.2",
     "dateformat": "^4.5.1",
+    "join-array": "^1.1.3",
     "lodash.groupby": "^4.6.0",
     "mssql": "^6.3.2",
     "nodemailer": "^6.6.3",
     "nodemailer-express-handlebars": "^4.0.0",
     "objects-to-csv-file": "^1.0.1",
     "path": "^0.12.7",
-    "request-validator-js": "^1.0.3",
-    "uuid": "^7.0.3",
-    "xlsx": "^0.17.4",
-    "xlsx-populate": "^1.21.0"
+    "xlsx": "^0.17.4"
   }
 }
