Se actualiza documentacion en los archivos MD

--- a/local.settings.json.example
+++ b/local.settings.json.example
@@ -4,20 +4,11 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "AzureWebJobsStorage": "",
     "TMP_FOLDER": "tmp/",
-    "IMG_FOLDER": "shared/img/",
     "NOMBRE_INFORMA": "",
     "DB_HOST_FINANCES_HOST": "",
     "DB_HOST_FINANCES_DBNAME": "",
     "DB_HOST_FINANCES_USER": "",
     "DB_HOST_FINANCES_PASSWORD": "",
-    "DB_TEST_HOST_FINANCES_HOST": "",
-    "DB_TEST_HOST_FINANCES_DBNAME": "",
-    "DB_TEST_HOST_FINANCES_USER": "",
-    "DB_TEST_HOST_FINANCES_PASSWORD": "",
-    "DB_DEV_HOST_FINANCES_HOST": "",
-    "DB_DEV_HOST_FINANCES_DBNAME": "",
-    "DB_DEV_HOST_FINANCES_USER": "",
-    "DB_DEV_HOST_FINANCES_PASSWORD": "",
     "DB_HOST_USERS_HOST": "",
     "DB_HOST_USERS_DBNAME": "",
     "DB_HOST_USERS_USER": "",
@@ -26,20 +17,21 @@
     "DB_HOST_PRODUCTS_DBNAME": "",
     "DB_HOST_PRODUCTS_USER": "",
     "DB_HOST_PRODUCTS_PASSWORD": "",
-    "N_INFORME_SKU_FILE": "",
-    "N_PENDIENTES_LIQUIDAR_FILE": "",
-    "N_SIN_CATEGORIA_FILE": "",
-    "N_SALES_FILE": "",
-    "N_SELLERS_FILE": "",
+    "N_INFORME_SKU_FILE": "InformeSku",
+    "N_PENDIENTES_LIQUIDAR_FILE": "PendientesLiqui",
+    "N_SIN_CATEGORIA_FILE": "SKUSinCategoria",
+    "N_SALES_FILE": "VentasLiquidadas",
+    "N_SELLERS_FILE": "SellersLiquidados",
     "AZURE_STORAGE_ACCOUNT": "",
     "AZURE_STORAGE_ACCESS_KEY": "",
     "AZURE_STORAGE_CONNECTION_STRING": "",
-    "SENDGRID_API_KEY":"",
+    "AZURE_BLOBSTORAGE_NAME": "",
+    "SENDGRID_API_KEY": "",
     "SENDGRID_MAIL_FROM": "",
     "SENDGRID_MAIL_TO": "",
     "SENDGRID_MAIL_CC": "",
     "SENDGRID_MAIL_BCC": "",
-    "GMAIL_HOST": "",
+    "GMAIL_HOST": "smtp.gmail.com",
     "GMAIL_PORT": 465,
     "GMAIL_REQUIRETLS": true,
     "GMAIL_AUTH_USER": "",
@@ -50,6 +42,7 @@
     "GMAIL_MAIL_BCC": "",
     "private_key": "",
     "client_email": "",
-    "GCLOUD_PROJECT": ""
+    "GCLOUD_PROJECT": "",
+    "NODE_TLS_REJECT_UNAUTHORIZED": 0
   }
 }
