--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google-cloud/bigquery": "^5.8.0",
     "@sendgrid/mail": "^7.4.6",
     "async": "^3.2.2",
+    "compressing": "^1.5.1",
     "dateformat": "^4.5.1",
     "join-array": "^1.1.3",
     "lodash.groupby": "^4.6.0",
